--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -6,21 +6,29 @@
 {% block title %}
     {% trans "Account" %}
 {% endblock title %}
-{% block content_header %}
-    <h1>
-        {% trans "Account" %}<br>
-        <small><i class="fa fa-user"></i>
-            {% if user and not user.is_anonymous %}
-                <a>Hello, {{ user.username }}!</a>
-                <br>
-            {% endif %}
-        </small>
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Account</li>
-    </ol>
-{% endblock content_header %}
+{% block content_header_new %}
+    <section class="content-header-new container-fluid">
+        <div class="col-md-4">
+            <h1>
+                {% trans "Account" %}<br>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#">{% trans "account" %}</a></li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
+                </span>
+                <span class="input-group-btn filterbtn">
+                    <button type="submit" class="btn btn-content-header"><i class="fa fa-filter"></i></button>
+                </span>
+            </div>
+        </div>
+    </section>
+{% endblock content_header_new %}
 {% block content %}
     <div class="row">
         <div class="col-md-12">
