--- a/templates/groupsystem/all_group.html
+++ b/templates/groupsystem/all_group.html
@@ -33,17 +33,31 @@
     {% endcompress %}
 {% endblock extrastyle %}
 
-{% block content_header %}
-    <h1>
-        {% trans "All Groups" %}<br>
-        <small><i class="fa fa-user"></i>
-            {% if user and not user.is_anonymous %}
-                <a>Hello, {{ user.username }}!</a>
-                <br>
-            {% endif %}
-        </small>
-    </h1>
-{% endblock content_header %}
+{% block content_header_new %}
+    <section class="content-header-new container-fluid">
+        <div class="col-md-4">
+            <h1>
+                {% trans "All Groups" %}<br>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#">{% trans "Groups" %}</a></li>
+                <li class="active">{% trans "all groups" %}</li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
+                </span>
+                <span class="input-group-btn filterbtn">
+                    <button type="submit" class="btn btn-content-header"><i class="fa fa-filter"></i></button>
+                </span>
+            </div>
+        </div>
+    </section>
+{% endblock content_header_new %}
+
 
 {% block content %}
     <div class="row">
