--- a/templates/groupsystem/commentadmin.html
+++ b/templates/groupsystem/commentadmin.html
@@ -10,17 +10,31 @@
         }
     </style>
 {% endblock extrastyle %}
-{% block content_header %}
-    <h1>
-        {% trans "Comments" %}<br>
-        <small><i class="fa fa-user"></i>
-            {% if user and not user.is_anonymous %}
-                <a>Hello, {{ user.username }}!</a>
-                <br>
-            {% endif %}
-        </small>
-    </h1>
-{% endblock content_header %}
+{% block content_header_new %}
+    <section class="content-header-new container-fluid">
+        <div class="col-md-4">
+            <h1>
+                {{ group.name }} - {% trans "admin" %} - {% trans "comments" %}<br>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#">{% trans "Group" %}</a></li>
+                <li class="active">{% trans "admin" %}</li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
+                </span>
+                <span class="input-group-btn filterbtn">
+                    <button type="submit" class="btn btn-content-header"><i class="fa fa-filter"></i></button>
+                </span>
+            </div>
+        </div>
+    </section>
+{% endblock content_header_new %}
+
 {% block content %}
     <div class="row">
         <div class="col-md-12">
