--- a/templates/messagingsystem/index.html
+++ b/templates/messagingsystem/index.html
@@ -51,17 +51,29 @@
     </style>
     {% endcompress %}
 {% endblock extrastyle %}
-{% block content_header %}
-    <h1>
-        {% trans "Messaging" %}<br>
-        <small><i class="fa fa-user"></i>
-            {% if request.user and not request.user.is_anonymous %}
-                <a>Hello, {{ request.user.username }}!</a>
-                <br>
-            {% endif %}
-        </small>
-    </h1>
-{% endblock content_header %}
+{% block content_header_new %}
+    <section class="content-header-new container-fluid">
+        <div class="col-md-4">
+            <h1>
+                {% trans "Messenger" %}<br>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#">{% trans "messenger" %}</a></li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
+                </span>
+                <span class="input-group-btn filterbtn">
+                    <button type="submit" class="btn btn-content-header"><i class="fa fa-filter"></i></button>
+                </span>
+            </div>
+        </div>
+    </section>
+{% endblock content_header_new %}
 {% block content %}
     <div class="row">
         <div class="col-md-3">
