--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.3.1">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}">
+    <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}?v=1.0.1">
     <!-- iCheck -->
     <link rel="stylesheet" href="{% static "plugins/iCheck/flat/blue.css" %}">
     <!-- Morris chart -->
