--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -13,6 +13,7 @@
                 <li><a href="#">{% trans "signups" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -24,6 +25,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 
