--- a/templates/groupsystem/groupdetails.html
+++ b/templates/groupsystem/groupdetails.html
@@ -20,6 +20,7 @@
                 <li><a href="#">{% trans "Group" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -31,6 +32,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 {% block content %}
