--- a/templates/timelines/index.html
+++ b/templates/timelines/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#">{% trans "timeline" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -32,6 +33,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 {% block content %}
