--- a/templates/groupsystem/all_group.html
+++ b/templates/groupsystem/all_group.html
@@ -44,6 +44,7 @@
                 <li class="active">{% trans "all groups" %}</li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -55,6 +56,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 
