--- a/templates/groupsystem/postsadmin.html
+++ b/templates/groupsystem/postsadmin.html
@@ -14,6 +14,7 @@
                 <li class="active">{% trans "admin" %}</li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -25,6 +26,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 {% block content %}
