--- a/templates/groupsystem/subscribed_group.html
+++ b/templates/groupsystem/subscribed_group.html
@@ -16,6 +16,7 @@
                 <li class="active">{% trans "admin" %}</li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -27,6 +28,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 
