--- a/templates/messagingsystem/index.html
+++ b/templates/messagingsystem/index.html
@@ -61,6 +61,7 @@
                 <li><a href="#">{% trans "messenger" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -72,6 +73,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 {% block content %}
