--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -45,6 +45,7 @@
                 <li><a href="#">{% trans "profile" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -56,6 +57,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 
