--- a/templates/useraccount/transfer.html
+++ b/templates/useraccount/transfer.html
@@ -16,6 +16,7 @@
                 <li><a href="#">{% trans "transfer" %}</a></li>
             </ol>
         </div>
+        {% comment %}
         <div class="col-md-6">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." id="liveSearch">
@@ -27,6 +28,7 @@
                 </span>
             </div>
         </div>
+        {% endcomment %}
     </section>
 {% endblock content_header_new %}
 {% block content %}
